...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_date"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/textStartDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/search_date_start"
            android:inputType="date" />

        <EditText
            android:id="@+id/textEndDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/search_date_end"
            android:inputType="date" />
    </LinearLayout>
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_location"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/textStartLoc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/search_location_top_left"
            android:inputType="none" />

        <EditText
            android:id="@+id/textEndLoc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/search_location_bottom_right"
            android:inputType="none" />
    </LinearLayout>
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_keywords"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/textKeywordSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/search_keywords_hint"
            android:inputType="text" />

    </LinearLayout>

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="30dp"
        android:onClick="search"
        android:text="@string/search_go"
...
